--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -28,7 +28,7 @@
 @article{totem10,
       author         = "Antchev, G. and Aspell, P. and Atanassov, I. and Avati,
                         V. and Berardi, V. and others",
-      title          = "{The TOTEM detector at LHC}",
+      title          = "The TOTEM detector at LHC",
       journal        = "Nucl.Instrum.Meth.",
       volume         = "A617",
       pages          = "62-66",
@@ -38,7 +38,7 @@
 
 @Article{totem08,
       author         = "Anelli, G. and others",
-      title          = "{The TOTEM experiment at the CERN Large Hadron Collider}",
+      title          = "The TOTEM experiment at the CERN Large Hadron Collider",
       collaboration  = "TOTEM Collaboration",
       journal        = "JINST",
       volume         = "3",
@@ -49,8 +49,8 @@
 
 @Article{hubert,
       author         = "Niewiadomski, Hubert",
-      title          = "{Reconstruction of protons in the TOTEM roman pot
-                        detectors at the LHC}",
+      title          = "Reconstruction of protons in the TOTEM roman pot
+                        detectors at the LHC",
       year           = "2008",
 }
 
@@ -98,8 +98,8 @@
 % the review
 @Article{islam06,
      author    = "Islam, M. M. and Luddy, R. J. and Prokudin, A. V.",
-     title     = "{Near forward $p p$ elastic scattering at LHC and nucleon
-                  structure}",
+     title     = "Near forward $p p$ elastic scattering at LHC and nucleon
+                  structure",
      journal   = "Int. J. Mod. Phys.",
      volume    = "A21",
      year      = "2006",
@@ -121,7 +121,7 @@
 
 @Article{wu70,
      author    = "Cheng, Hung and Wu, T. T.",
-     title     = "{Limit of Cross-Sections at Infinite Energy}",
+     title     = "Limit of Cross-Sections at Infinite Energy",
      journal   = "Phys. Rev. Lett.",
      volume    = "24",
      year      = "1970",
@@ -132,8 +132,8 @@
 
 @Article{bsw79,
      author    = "Bourrely, C. and Soffer, Jacques and Wu, Tai Tsun",
-     title     = "{A New Impact Picture for Low and High-Energy Proton Proton
-                  Elastic Scattering}",
+     title     = "A New Impact Picture for Low and High-Energy Proton Proton
+                  Elastic Scattering",
      journal   = "Phys. Rev.",
      volume    = "D19",
      year      = "1979",
@@ -144,8 +144,8 @@
 
 @Article{bsw84,
      author    = "Bourrely, C. and Soffer, Jacques and Wu, T. T.",
-     title     = "{Impact Picture Expectations for Very High-Energy Elastic
-                  $p p$ and $p \bar{p}$ Scattering}",
+     title     = "Impact Picture Expectations for Very High-Energy Elastic
+                  $p p$ and $p \bar p$ Scattering",
      journal   = "Nucl. Phys.",
      volume    = "B247",
      year      = "1984",
@@ -156,8 +156,8 @@
 
 @Article{bsw03,
      author    = "Bourrely, Claude and Soffer, Jacques and Wu, Tai Tsun",
-     title     = "{Impact picture phenomenology for $\pi^+$ -p, $K^+$ -p and
-                  $p p$, $\bar{p} p$ elastic scattering at high-energies}",
+     title     = "Impact picture phenomenology for $\pi^+$ -p, $K^+$ -p and
+                  $p p$, $\bar p p$ elastic scattering at high-energies",
      journal   = "Eur. Phys. J.",
      volume    = "C28",
      year      = "2003",
@@ -172,8 +172,8 @@
 @Article{bh99,
      author    = "Block, M. M. and Gregores, E. M. and Halzen, F. and
                   Pancheri, G.",
-     title     = "{Photon - proton and photon-photon scattering from nucleon-
-                  nucleon forward amplitudes}",
+     title     = "Photon - proton and photon-photon scattering from nucleon-
+                  nucleon forward amplitudes",
      journal   = "Phys. Rev.",
      volume    = "D60",
      year      = "1999",
@@ -186,7 +186,7 @@
 
 @article{ppp02,
       author         = "Petrov, V.A. and Prokudin, A.V.",
-      title          = "{The First three pomerons...}",
+      title          = "The First three pomerons...",
       journal        = "Eur.Phys.J.",
       volume         = "C23",
       pages          = "135-143",
@@ -197,12 +197,69 @@
       primaryClass   = "hep-ph",
 }
 
+#------------------------------------------ FORM FACTORS --------------------------------------------
+
+@Article{hofstadter58,
+  title = "Electromagnetic Structure of the Proton and Neutron",
+  author = "Hofstadter, R.  and Bumiller, F.  and Yearian, M. R.",
+  journal = "Rev. Mod. Phys.",
+  volume = "30",
+  number = "2",
+  pages = "482--497",
+  numpages = "15",
+  year = "1958",
+  month = "Apr",
+  doi = "10.1103/RevModPhys.30.482",
+  publisher = "American Physical Society"
+}
+
+@Article{sachs62,
+  title = "High-Energy Behavior of Nucleon Electromagnetic Form Factors",
+  author = "Sachs, R. G.",
+  journal = "Phys. Rev.",
+  volume = "126",
+  number = "6",
+  pages = "2256--2260",
+  numpages = "4",
+  year = "1962",
+  month = "Jun",
+  doi = "10.1103/PhysRev.126.2256",
+  publisher = "American Physical Society"
+}
+
+@Article{borkowski74,
+	title = "Electromagnetic form factors of the proton at low four-momentum transfer",
+	journal = "Nuclear Physics A",
+	volume = "222",
+	number = "2",
+	pages = "269 - 275",
+	year = "1974",
+	note = "",
+	issn = "0375-9474",
+	doi = "DOI: 10.1016/0375-9474(74)90392-3",
+	url = "http://www.sciencedirect.com/science/article/B6TVB-472T811-68/2/547e551a795ca37ad03fb01d70462b64",
+	author = "F. Borkowski and P. Peuser and G. G. Simon and V. H. Walther and R. D. Wendling",
+	keywords = "Nuclear reactions"
+}
+
+@Article{borkowski75,
+      author         = "Borkowski, F. and Peuser, P. and Simon, G.G. and Walther,
+                        V.H. and Wendling, R.D.",
+      title          = "Electromagnetic Form-Factors of the Proton at Low
+                        Four-Momentum Transfer",
+      journal        = "Nucl.Phys.",
+      volume         = "B93",
+      pages          = "461",
+      doi            = "10.1016/0550-3213(75)90514-3",
+      year           = "1975",
+}
+
 
 #------------------------------------------ ELASTIC THEORY ------------------------------------------
 
 @Article{bethe58,
      author    = "Bethe, H. A.",
-     title     = "{Scattering and polarization of protons by nuclei}",
+     title     = "Scattering and polarization of protons by nuclei",
      journal   = "Annals Phys.",
      volume    = "3",
      year      = "1958",
@@ -213,14 +270,29 @@
 
 @Article{yennie61,
       author         = "Yennie, D.R. and Frautschi, Steven C. and Suura, H.",
-      title          = "{The infrared divergence phenomena and high-energy
-                        processes}",
+      title          = "The infrared divergence phenomena and high-energy
+                        processes",
       journal        = "Annals Phys.",
       volume         = "13",
       pages          = "379-452",
       doi            = "10.1016/0003-4916(61)90151-8",
       year           = "1961",
 }
+
+@Article{yennie63,
+  title = "Radiative Corrections to High-Energy Scattering Processes",
+  author = "Meister, N.  and Yennie, D. R.",
+  journal = "Phys. Rev.",
+  volume = "130",
+  number = "3",
+  pages = "1210--1229",
+  numpages = "19",
+  year = "1963",
+  month = "May",
+  doi = "10.1103/PhysRev.130.1210",
+  publisher = "American Physical Society"
+}
+
 
 @Article{locher67,
 	title = "Relativistic treatment of structure in the Coulomb interference problem",
@@ -237,22 +309,22 @@
 }
 
 @Article{rix66,
-  title = {Separation of Strong and Electromagnetic Effects in Charged-Particle Scattering},
-  author = {Rix, J.  and Thaler, R. M.},
-  journal = {Phys. Rev.},
-  volume = {152},
-  number = {4},
-  pages = {1357--1363},
-  numpages = {6},
-  year = {1966},
-  month = {Dec},
-  doi = {10.1103/PhysRev.152.1357},
-  publisher = {American Physical Society}
+  title = "Separation of Strong and Electromagnetic Effects in Charged-Particle Scattering",
+  author = "Rix, J.  and Thaler, R. M.",
+  journal = "Phys. Rev.",
+  volume = "152",
+  number = "4",
+  pages = "1357--1363",
+  numpages = "6",
+  year = "1966",
+  month = "Dec",
+  doi = "10.1103/PhysRev.152.1357",
+  publisher = "American Physical Society"
 }
 
 @Article{islam67,
       author         = "Islam, M.M.",
-      title          = "{Bethe's Formula for Coulomb-Nuclear Interference}",
+      title          = "Bethe's Formula for Coulomb-Nuclear Interference",
       journal        = "Phys.Rev.",
       volume         = "162",
       pages          = "1426-1428",
@@ -262,7 +334,7 @@
 
 @Article{wy68,
      author    = "West, Geoffrey B. and Yennie, D. R.",
-     title     = "{Coulomb interference in high-energy scattering}",
+     title     = "Coulomb interference in high-energy scattering",
      journal   = "Phys. Rev.",
      volume    = "172",
      year      = "1968",
@@ -296,8 +368,8 @@
 
 @Article{klk87,
       author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
-      title          = "{MOMENTUM TRANSFER DEPENDENCE OF THE ELASTIC AMPLITUDE
-                        PHASE IN HIGH-ENERGY HADRON SCATTERING}",
+      title          = "MOMENTUM TRANSFER DEPENDENCE OF THE ELASTIC AMPLITUDE
+                        PHASE IN HIGH-ENERGY HADRON SCATTERING",
       journal        = "Phys.Rev.",
       volume         = "D35",
       pages          = "1719-1722",
@@ -307,15 +379,15 @@
 
 @Article{klk88,
       author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
-      title          = "{ROLE OF THE PHASE AND IMPACT PARAMETER PICTURE OF anti-p
-                        p ELASTIC SCATTERING AT COLLIDER ENERGIES}",
+      title          = "ROLE OF THE PHASE AND IMPACT PARAMETER PICTURE OF anti-p
+                        p ELASTIC SCATTERING AT COLLIDER ENERGIES",
       year           = "1988",
 }
 
 @Article{kl89,
       author         = "Kundrat, V. and Lokajicek, M.",
-      title          = "{CRITICAL COMMENTS ON THE STANDARD DESCRIPTION OF ELASTIC
-                        HADRON SCATTERING}",
+      title          = "CRITICAL COMMENTS ON THE STANDARD DESCRIPTION OF ELASTIC
+                        HADRON SCATTERING",
       journal        = "Phys.Lett.",
       volume         = "B232",
       pages          = "263-265",
@@ -325,8 +397,8 @@
 
 @Article{klk89,
       author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
-      title          = "{Physical meaning of the phase of high-energy elastic
-                        scattering amplitude}",
+      title          = "Physical meaning of the phase of high-energy elastic
+                        scattering amplitude",
       journal        = "Czech.J.Phys.",
       volume         = "B39",
       pages          = "1245-1255",
@@ -336,8 +408,8 @@
 
 @Article{klk92,
       author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
-      title          = "{High-energy elastic hadron scattering in Coulomb and
-                        hadronic regions}",
+      title          = "High-energy elastic hadron scattering in Coulomb and
+                        hadronic regions",
       journal        = "Phys.Rev.",
       volume         = "D46",
       pages          = "4087-4090",
@@ -347,8 +419,8 @@
 
 @Article{kl94,
      author    = "Kundrat, V. and Lokajicek, M.",
-     title     = "{High-energy scattering amplitude of unpolarized and
-                  charged hadrons}",
+     title     = "High-energy scattering amplitude of unpolarized and
+                  charged hadrons",
      journal   = "Z. Phys.",
      volume    = "C63",
      year      = "1994",
@@ -359,8 +431,8 @@
 
 @Article{kl96,
       author         = "Kundrat, V. and Lokajicek, M.",
-      title          = "{Description of high-energy elastic hadron scattering in
-                        both the Coulomb and hadronic domains}",
+      title          = "Description of high-energy elastic hadron scattering in
+                        both the Coulomb and hadronic domains",
       journal        = "Mod.Phys.Lett.",
       volume         = "A11",
       pages          = "2241-2250",
@@ -368,9 +440,20 @@
       year           = "1996",
 }
 
+@Article{selyugin99,
+      author         = "Selyugin, Oleg V.",
+      title          = "Coulomb hadron phase factor and spin phenomena in a wide
+                        region of transfer momenta",
+      journal        = "Phys.Rev.",
+      volume         = "D60",
+      pages          = "074028",
+      doi            = "10.1103/PhysRevD.60.074028",
+      year           = "1999",
+}
+
 @Article{kopeliovich01,
      author    = "Kopeliovich, B. Z. and Tarasov, A. V.",
-     title     = "{The Coulomb phase revisited}",
+     title     = "The Coulomb phase revisited",
      journal   = "Phys. Lett.",
      volume    = "B497",
      year      = "2001",
@@ -383,8 +466,8 @@
 
 @Article{klk02,
       author         = "Kundrat, V. and Lokajicek, M. and Krupa, D.",
-      title          = "{Impact parameter structure derived from elastic
-                        collisions}",
+      title          = "Impact parameter structure derived from elastic
+                        collisions",
       journal        = "Phys.Lett.",
       volume         = "B544",
       pages          = "132-138",
@@ -394,8 +477,8 @@
 
 @Article{ppp03,
      author    = "Petrov, V. A. and Predazzi, E. and Prokudin, A.",
-     title     = "{Coulomb interference in high-energy p p and anti-p p
-                  scattering}",
+     title     = "Coulomb interference in high-energy p p and anti-p p
+                  scattering",
      journal   = "Eur. Phys. J.",
      volume    = "C28",
      year      = "2003",
@@ -408,8 +491,8 @@
 
 @Article{kl03,
       author         = "Kundrat, V. and Lokajicek, M.",
-      title          = "{What can high-energy elastic scattering tell us about
-                        nucleon structure?}",
+      title          = "What can high-energy elastic scattering tell us about
+                        nucleon structure?",
       journal        = "Czech.J.Phys.",
       volume         = "53",
       pages          = "645-655",
@@ -433,8 +516,8 @@
 
 @Article{kl05,
       author         = "Kundrat, Vojtech and Lokajicek, Milos",
-      title          = "{Interference between Coulomb and hadronic scattering in
-                        elastic high-energy nucleon collisions}",
+      title          = "Interference between Coulomb and hadronic scattering in
+                        elastic high-energy nucleon collisions",
       journal        = "Phys.Lett.",
       volume         = "B611",
       pages          = "102-110",
@@ -447,8 +530,8 @@
 
 @Article{kl05-2,
       author         = "Kundrat, V. and Lokajicek, M.",
-      title          = "{Coulomb and hadronic scattering in elastic high-energy
-                        nucleon collisions}",
+      title          = "Coulomb and hadronic scattering in elastic high-energy
+                        nucleon collisions",
       year           = "2005",
       eprint         = "hep-ph/0510040",
       archivePrefix  = "arXiv",
@@ -457,15 +540,15 @@
 
 @Article{kl07,
       author         = "Kundrat, Vojtech and Kaspar, Jan and Lokajicek, Milos",
-      title          = "{To the theory of high-energy nucleon collisions}",
+      title          = "To the theory of high-energy nucleon collisions",
       pages          = "273-278",
       year           = "2007",
 }
 
 @Article{klv07,
       author         = "Kundrat, Vojtech and Lokajicek, Milos and Vrkoc, Ivo",
-      title          = "{Limited validity of West and Yennie integral formula for
-                        elastic scattering of hadrons}",
+      title          = "Limited validity of West and Yennie integral formula for
+                        elastic scattering of hadrons",
       journal        = "Phys.Lett.",
       volume         = "B656",
       pages          = "182-185",
@@ -478,8 +561,8 @@
 
 @Article{kl09,
       author         = "Kundrat, Vojtech and Kaspar, Jan and Lokajicek, Milos",
-      title          = "{Theoretical aspects of high energy elastic nucleon
-                        scattering}",
+      title          = "Theoretical aspects of high energy elastic nucleon
+                        scattering",
       year           = "2009",
       eprint         = "0912.1188",
       archivePrefix  = "arXiv",
@@ -488,8 +571,8 @@
 
 @Article{kl09-models,
       author         = "Kaspar, Jan and Kundrat, Vojtech and Lokajicek, Milos",
-      title          = "{Contemporary models of elastic nucleon scattering and
-                        their predictions for LHC}",
+      title          = "Contemporary models of elastic nucleon scattering and
+                        their predictions for LHC",
       year           = "2009",
       eprint         = "0912.0112",
       archivePrefix  = "arXiv",
@@ -498,8 +581,8 @@
 
 @Article{kl09-structure,
       author         = "Lokajicek, Milos V. and Kundrat, V.",
-      title          = "{Elastic pp scattering and the internal structure of
-                        colliding protons}",
+      title          = "Elastic pp scattering and the internal structure of
+                        colliding protons",
       year           = "2009",
       eprint         = "0909.3199",
       archivePrefix  = "arXiv",
@@ -509,8 +592,8 @@
 @Article{kl11,
       author         = "Kaspar, Jan and Kundrat, Vojtech and Lokajicek, Milos and
                         Prochazka, Jiri",
-      title          = "{Phenomenological models of elastic nucleon scattering
-                        and predictions for LHC}",
+      title          = "Phenomenological models of elastic nucleon scattering
+                        and predictions for LHC",
       journal        = "Nucl.Phys.",
       volume         = "B843",
       pages          = "84-106",
@@ -522,7 +605,7 @@
 
 @Article{phojet,
       author         = "Bopp, Fritz W. and Engel, R. and Ranft, J.",
-      title          = "{Rapidity gaps and the PHOJET Monte Carlo}",
+      title          = "Rapidity gaps and the PHOJET Monte Carlo",
       pages          = "729-741",
       year           = "1998",
       eprint         = "hep-ph/9803437",
@@ -533,7 +616,7 @@
 @Article{pythia6,
       author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
                         Z.",
-      title          = "{PYTHIA 6.4 Physics and Manual}",
+      title          = "PYTHIA 6.4 Physics and Manual",
       journal        = "JHEP",
       volume         = "0605",
       pages          = "026",
@@ -547,7 +630,7 @@
 @Article{pythia8,
       author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
                         Z.",
-      title          = "{A Brief Introduction to PYTHIA 8.1}",
+      title          = "A Brief Introduction to PYTHIA 8.1",
       journal        = "Comput.Phys.Commun.",
       volume         = "178",
       pages          = "852-867",
@@ -576,21 +659,21 @@
 
 @Book{wilson,
       author         = "Wilson, E.J.N.",
-      title          = "{An introduction to particle accelerators}",
+      title          = "An introduction to particle accelerators",
 	  publisher		 = "Oxford University Press",
       year           = "2001"
 }
 
 @Url{dolezal,
-    author  = "Doležal, Z.",
-	title = "Text k přednášce Vybrané kapitoly z urychlovačové fyziky",
-	url = "http://www-ucjf.troja.mff.cuni.cz/~dolezal/teach/accel/"		
+    author  = "Dole\v zal, Z.",
+	title = "Text k p\v redn\' a\v sce Vybran\' e kapitoly z urychlova\v cov\' e fyziky",
+	url = "http://www-ucjf.troja.mff.cuni.cz/~dolezal/teach/accel/"
 }
 
 @Book{wiedemann,
       author         = "Wiedemann, H.",
-      title          = "{Particle accelerator physics: Basic principles and
-                        linear beam dynamics}",
+      title          = "Particle accelerator physics: Basic principles and
+                        linear beam dynamics",
       year           = "1993",
 }
 
@@ -695,4 +778,31 @@
       year         = "2005",
       note         = "Presented on 2005",
 	  % CERN-THESIS-2010-062
+}
+
+@Url{tamara,
+	title="TamarA package",
+	url="http://library.wolfram.com/infocenter/MathSource/839/"
+}
+
+@Book{mathematica,
+	author="Wolfram Research, Inc.",
+   	title="Mathematica Edition: Version 7.0",
+	publisher="Wolfram Research, Inc.",
+	address="Champaign, Illinois"
+	year="2008"
+}
+
+@Url{chyla,
+	author="J.~Ch\' yla",
+	title="Course on Quarks, Partons and Quantum Chromodynamics",
+	url="http://www-hep2.fzu.cz/~chyla/lectures/text.pdf"
+}
+
+@Book{peskin,
+  author = "Michael E. Peskin and Dan V. Schroeder",
+  publisher = "Westview Press",
+  title = "An Introduction To Quantum Field Theory (Frontiers in Physics)",
+  year = "1995",
+  isbn = "0201503972"
 }
